force-app/main/default/objects/Program__c/Program__c.object-meta.xml
<CustomObject>
    <description>Studying programs</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>